--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "geolib": "^3.3.4",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "point-in-polygon": "^1.1.0"
   }
 }
